<resources>
    <string name="app_name">Military Reports Assistant</string>
    <string name="main_welcome">Welcome in Military Reports Assistant!</string>
    <string name="main_description">Start by opening menu in the top left corner or by adjusting settings on the top right corner.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_reports">Reports</string>
    <string name="navigation_drawer_reports_medevac">Medevac 9-liner</string>
    <string name="navigation_drawer_reports_sitrep">SITREP</string>
    <string name="navigation_drawer_reports_salute">SALUTE</string>
    <string name="navigation_drawer_reports_saltr">SALTR</string>
    <string name="navigation_drawer_reports_ied">IED/UXO</string>
    <string name="navigation_drawer_glossary">Glossary</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About application</string>
    <string name="status_callname_default">Callname</string>
    <string name="status_frequency_default">0 MHz</string>
    <string name="status_gps_label">WGS 84 (GPS)</string>
    <string name="status_gps_default">-GPS no location data-</string>
    <string name="status_mgrs_label">MGRS</string>
    <string name="status_mgrs_default">-MGRS no location data-</string>
    <string name="status_precision_default">-no precision data-</string>
    <string name="status_time_position_retrieved_default">-no location acquired time-</string>
    <string name="status_duration_postion_retrieved_default">-</string>
    <string name="status_zulu_time_default">-no DTG-</string>
    <string name="status_local_date_default">-no date-</string>
    <string name="status_local_time_default">-no time-</string>
    <string name="status_person_image_description">Personal info</string>
    <string name="status_location_image_description">Location info</string>
    <string name="status_time_image_description">Time info</string>
    <string name="status_precision">Precision</string>
    <string name="status_last_fix">Last fix at</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_tactical_category">Tactical stuff</string>
    <string name="settings_application_category">Application</string>
    <string name="settings_app_reloaded">Settings has been applied</string>
    <string name="preference_callsign_summary">Callsign used in reports.</string>
    <string name="preference_callsign_title">Callsign</string>
    <string name="preference_frequency_summary">Radio frequency of users radio.</string>
    <string name="preference_frequency_title">Radio frequency</string>
    <string name="preference_ramrod_summary">RAMROD used to encode numbers.</string>
    <string name="preference_ramrod_title">RAMROD</string>
    <string name="preference_ramrod_default">ALGORITMUS</string>
    <string name="preference_callsign_default">Grunt 1</string>
    <string name="preference_frequency_default">0</string>
    <string name="preference_phonetic_alphabet_title">Phonetic alphabet</string>
    <string name="preference_phonetic_alphabet_summary">Phonetic alphabet that will be used for spelling</string>
    <string-array name="preference_phonetic_alphabet_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="preference_phonetic_alphabet_labels">
        <item>NATO</item>
        <item>Czech</item>
    </string-array>
    <string name="preference_military_offset_title">Time offset</string>
    <string name="preference_military_offset_summary">Time offset (zone) used for date time group</string>
    <string-array name="preference_military_offset_values">
        <item>-12</item>
        <item>-11</item>
        <item>-10</item>
        <item>-9</item>
        <item>-8</item>
        <item>-7</item>
        <item>-6</item>
        <item>-5</item>
        <item>-4</item>
        <item>-3</item>
        <item>-2</item>
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="preference_military_offset_labels">
        <item>Z - UTC-12:00</item>
        <item>Y - UTC-11:00</item>
        <item>X - UTC-10:00</item>
        <item>W - UTC-09:00</item>
        <item>V - UTC-08:00</item>
        <item>U - UTC-07:00</item>
        <item>T - UTC-06:00</item>
        <item>S - UTC-05:00</item>
        <item>Q - UTC-04:00</item>
        <item>P - UTC-03:00</item>
        <item>O - UTC-02:00</item>
        <item>N - UTC-01:00</item>
        <item>Z - UTC+00:00</item>
        <item>A - UTC+01:00</item>
        <item>B - UTC+02:00</item>
        <item>C - UTC+03:00</item>
        <item>D - UTC+04:00</item>
        <item>E - UTC+05:00</item>
        <item>F - UTC+06:00</item>
        <item>G - UTC+07:00</item>
        <item>H - UTC+08:00</item>
        <item>I - UTC+09:00</item>
        <item>K - UTC+10:00</item>
        <item>L - UTC+11:00</item>
        <item>M - UTC+12:00</item>
    </string-array>
    <string name="preference_night_mode_summary">Application visual style</string>
    <string name="preference_night_mode_title">Day/Night Mode</string>
    <string-array name="preference_night_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="preference_night_mode_labels">
        <item>Auto</item>
        <item>Day</item>
        <item>Night</item>
    </string-array>
    <string name="preference_locale_summary">Choose application language</string>
    <string name="preference_locale_title">Language</string>
    <string-array name="preference_locale_values">
        <item>en</item>
        <item>cs</item>
    </string-array>
    <string-array name="preference_locale_labels">
        <item>English</item>
        <item>Czech</item>
    </string-array>
    <string name="report_location_button">Get other location</string>
    <string name="report_location_missing_api">Please install Google Play Services to use this feature</string>
    <string name="report_time">Time</string>
    <string name="report_time_hint">Time and date</string>
    <string name="report_size">Size</string>
    <string name="report_size_hint">Number of personnel, vehicles and equipment</string>
    <string name="report_activity">Activity</string>
    <string name="report_activity_hint">Actions or activity of the enemy</string>
    <string name="report_location">Location</string>
    <string name="report_location_hint">Location of the enemy</string>
    <string name="report_frequency">Frequency</string>
    <string name="report_call_sign">Call sign</string>
    <string name="report_line">Line</string>
    <string name="report_negative">Negative</string>
    <string name="report_datetime_button">Choose time</string>
    <string name="report_datetime_dialog">Select date and time</string>
    <string name="report_leaving_dialog_label">Leaving report concept</string>
    <string name="report_leaving_dialog_content">You will lose prepared report!</string>
    <string name="title_activity_medevac_report">Medevac 9-line request</string>
    <string name="report_medevac_line_1">Line 1 - Location of the pick-up site</string>
    <string name="report_medevac_line_1_coordinates">Coordinates</string>
    <string name="report_medevac_line_2">Line 2 - Radio frequency and call sign</string>
    <string name="report_medevac_line_3">Line 3 - Number of patients of precedence</string>
    <string name="report_medevac_line_3_alpha">A - Urgent</string>
    <string name="report_medevac_line_3_bravo">B - Urgent surgical</string>
    <string name="report_medevac_line_3_charlie">C - Priority</string>
    <string name="report_medevac_line_3_delta">D - Routine</string>
    <string name="report_medevac_line_3_echo">E - Convenience</string>
    <string name="report_medevac_line_4">Line 4 - Special equipment required</string>
    <string name="report_medevac_line_4_alpha">A - None</string>
    <string name="report_medevac_line_4_bravo">B - Hoist</string>
    <string name="report_medevac_line_4_charlie">C - Extraction equipment</string>
    <string name="report_medevac_line_4_delta">D - Ventilator</string>
    <string name="report_medevac_line_5">Line 5 - Number of patients</string>
    <string name="report_medevac_line_5_alpha">A - Ambulatory</string>
    <string name="report_medevac_line_5_lima">L -  Litter</string>
    <string name="report_medevac_line_6">Line 6 - Security at pick-up site</string>
    <string name="report_medevac_line_6_alpha">N - No enemy troops in area</string>
    <string name="report_medevac_line_6_bravo">P - Possible enemy troops in area (approach with caution)</string>
    <string name="report_medevac_line_6_charlie">E - enemy troops in area (approach with caution)</string>
    <string name="report_medevac_line_6_delta">X - enemy troops in area (armed escort required)</string>
    <string name="report_medevac_line_7">Line 7 - Method of pick-up site marking</string>
    <string name="report_medevac_line_7_alpha">A - Panel</string>
    <string name="report_medevac_line_7_bravo">B - Pyrotechnic signal</string>
    <string name="report_medevac_line_7_charlie">C - Smoke signal</string>
    <string name="report_medevac_line_7_delta">D - None</string>
    <string name="report_medevac_line_7_echo">E - Other</string>
    <string name="report_medevac_line_8">Line 8 - Patient nationality and status</string>
    <string name="report_medevac_line_8_alpha">A - US military</string>
    <string name="report_medevac_line_8_bravo">B - US civilian</string>
    <string name="report_medevac_line_8_charlie">C - Non-US military</string>
    <string name="report_medevac_line_8_delta">D - Non-US civilian</string>
    <string name="report_medevac_line_8_echo">E - Enemy POW </string>
    <string name="report_medevac_line_9">Line 9 - NBC contamination</string>
    <string name="report_medevac_line_9_november">N - Nuclear</string>
    <string name="report_medevac_line_9_biological">B - Biological</string>
    <string name="report_medevac_line_9_chemical">C - Chemical</string>
    <string name="report_medevac_line_9_none">none</string>
    <string name="title_activity_salute_report">SALUTE report</string>
    <string name="report_salute_uniform">Unit/Uniform</string>
    <string name="report_salute_uniform_hint">Unit identification - by markings, unforms etc</string>
    <string name="report_salute_equipment">Equipment</string>
    <string name="report_salute_equipment_hint">Equipment and weapons observed</string>
    <string name="title_activity_saltr_report">SALTR Report</string>
    <string name="report_saltr_request">Request / remarks</string>
    <string name="report_saltr_request_hint">Another requests or remarks to be added to the report</string>
    <string name="title_activity_situation_report">SITREP</string>
    <string name="report_situation_status">Unit status</string>
    <string name="report_situation_status_green_label">Green (100–75%)</string>
    <string name="report_situation_unit_status_green_label">Green (100–90%)</string>
    <string name="report_situation_status_green">Green</string>
    <string name="report_situation_status_amber_label">Amber (74–50%)</string>
    <string name="report_situation_unit_status_amber_label">Amber (90–75%)</string>
    <string name="report_situation_status_amber">Amber</string>
    <string name="report_situation_status_red_label">Red (49–25%)</string>
    <string name="report_situation_unit_status_red_label">Red (75–60%)</string>
    <string name="report_situation_status_red">Red</string>
</resources>